--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "envfile": "^2.1.1",
     "express": "~4.13.3",
     "express-session": "~1.12.1",
+		"forever": "",
     "glob": "^7.0.3",
     "grunt": "~0.4.1",
     "grunt-concurrent": "~2.3.0",
