1) Added fs-extra in npm packsage as it is required for setup.js 2) Correcting the node arg in grunt file. --debug is deprecated now

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "envfile": "^2.1.1",
     "express": "~4.13.3",
     "express-session": "~1.12.1",
-		"forever": "",
+    "forever": "",
+    "fs-extra": "^5.0.0",
     "glob": "^7.0.3",
     "grunt": "~0.4.1",
     "grunt-concurrent": "~2.3.0",
